Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/module/widget/widget.less
+++ b/css/module/widget/widget.less
@@ -8,6 +8,7 @@
 @import url('w-category.less');		//主题分类
 @import url('w-order.less');			//主题排序
 @import url('w-filter.less');		//主题筛选
+@import url('w-mode.less');		//手机版
 
 
 @import url('w-adminbar.less');		//管理操作条
