--- a/css/module/widget/w-pages.less
+++ b/css/module/widget/w-pages.less
@@ -15,6 +15,12 @@
 
 	.pg{margin:0 !important;.clearfix;}
 }
+.ua-mobile,.screen-s{
+	.w-pages-list .pg{
+		.fl;
+	}
+}
+
 
 //翻页旁发布按钮
 .u-btn-publish{
@@ -63,7 +69,6 @@
 .w-pages-bottom{
 	margin-bottom:10px;
 }
-
 .ua-mobile,.screen-s{
 	.w-pages-bottom .u-btn-publish{
 		.w(100%);
