--- a/css/user/msg/list.less
+++ b/css/user/msg/list.less
@@ -16,11 +16,13 @@
 	.o{
 	    overflow: hidden;
 	    float: right;
-	    margin-left: 10px;
+	    margin-left:5px;
+	    margin-right:5px;
 	    width: 16px;
 	    height: 16px;
 	    text-indent: 20px;
 	    background: url(http://img.jx3pve.com/static/image/common//op.png) no-repeat 0 -120px;
+	    margin-top:4px;
 	}
 	.db;
 	.xg1.z{
@@ -106,6 +108,7 @@
 		background-color:#fff;
 		border-bottom:none;
 		margin-bottom:10px;
+		padding:10px 10px 10px 75px;
 	}
 }
 
