--- a/template/default/widget/w_mode_filter.htm
+++ b/template/default/widget/w_mode_filter.htm
@@ -1,6 +1,6 @@
 <!--{if $quicksearchlist && !$_GET['archiveid']}-->
 	
-	<div class="w-filter" id="w-filter">
+	<div class="w-mode-filter" id="w-filter">
 
 		<script type="text/javascript">
 			var forum_optionlist = <!--{if $forum_optionlist}-->'$forum_optionlist'<!--{else}-->''<!--{/if}-->;
