--- a/css/module/common/i-header/common.less
+++ b/css/module/common/i-header/common.less
@@ -8,6 +8,7 @@
     background: linear-gradient(to bottom,#086ed5,#055db5);
     border-bottom: 1px solid #044e97;
     box-shadow: 0 1px 2px rgba(0,0,0,.25),inset 0 1px 0 rgba(255,255,255,.15);
+    //background:#000;
 }
 .i-header-fix{
 	.z(40);
