--- a/css/module/common/c-compass.less
+++ b/css/module/common/c-compass.less
@@ -63,18 +63,20 @@
 		}
 	}
 }
-.ua-responsive .screen-s .c-compass{
-	li{
-		.w(33%);
+.ua-mobile,.screen-s{
+	.c-compass{
+		li{
+			.w(33%);
+		}
+		em{
+			.size(32px);
+			background-size:100% auto;
+		}
+		.u-more i{
+			margin-top:45px;
+		}
 	}
-	em{
-		.size(32px);
-		background-size:100% auto;
-	}
-	.u-more i{
-		margin-top:45px;
-	}
-}
+} 
 .m-sitemap-compass .c-compass{
 	.u-more{
 		.none;
@@ -84,15 +86,17 @@
 	}
 	
 }
-.ua-responsive .screen-s .m-sitemap-compass .c-compass{
-	.u-more{
-		.db;
-	}
-	.u-locked{
-		.none;
-	}
-	.u-old{
-		.none;
+.ua-mobile,.screen-s{
+	.m-sitemap-compass .c-compass{
+		.u-more{
+			.db;
+		}
+		.u-locked{
+			.none;
+		}
+		.u-old{
+			.none;
+		}
 	}
 }
 
