--- a/css/module/forum/post/c-post-header.less
+++ b/css/module/forum/post/c-post-header.less
@@ -31,8 +31,10 @@
     }
 }
 
-.ua-responsive .screen-s .c-post-tab{
-    li.y{.none;}
+.ua-mobile,.screen-s{
+    .c-post-tab{
+        li.y{.none;}
+    }
 }
 
 .c-post-custominfo{
