宏库、工具、关于、五甲捷报
Signed-off-by: unknown <17229398@qq.com>

--- a/css/module/forum/forumdisplay/c-flist-item.less
+++ b/css/module/forum/forumdisplay/c-flist-item.less
@@ -130,6 +130,7 @@
 			.db;margin-bottom:10px;
 			a{.db;}
 			img{.size(32px);.r(32px);}
+			.fl;
 		}
 
 		.u-author{
@@ -161,6 +162,7 @@
 			}
 		}
 		.u-title{
+			.clear;
 			.db;
 			white-space:normal;
 			float:none;
