--- a/css/module/forum/forumdisplay/c-flist.less
+++ b/css/module/forum/forumdisplay/c-flist.less
@@ -22,7 +22,8 @@
 	.listpage-container{
 		background-color:#fafafa;
 		.w-pages-next{
-			.db;.w(60%);.auto(x);
+			.db;
+			margin:10px;
 		}
 		.w-pages{
 			padding:0 10px;
