--- a/css/module/forum/post/c-post-attribute.less
+++ b/css/module/forum/post/c-post-attribute.less
@@ -226,22 +226,27 @@
 }
 
 
-.ua-responsive .screen-s .c-editor-extend{
-	.m-title span{
-		.none;
-	}
-	.m-editor-tag .u-text{
-		.db;
-		width: 100%;
-    	box-sizing: border-box;
-	}
-	.u-item-justforauthor{
-		i{.none;}
-		label{text-decoration:none;}
-		label:after{.none;}
-	}
-	.m-editor-activity{
-		.none;
+.ua-mobile,.screen-s{
+	.c-editor-extend{
+		.m-title span{
+			.none;
+		}
+		.m-editor-tag .u-text{
+			.db;
+			width: 100%;
+	    	box-sizing: border-box;
+		}
+		.u-item-justforauthor{
+			i{.none;}
+			label{text-decoration:none;}
+			label:after{.none;}
+		}
+		.m-editor-activity{
+			.none;
+		}
+		.xg1{
+			font-size:12px;
+		}
 	}
 }
 
