--- a/css/module/forum/post/c-post-body.less
+++ b/css/module/forum/post/c-post-body.less
@@ -19,8 +19,10 @@
 		.tips(help);
 	}
 }
-.ua-responsive .screen-s .c-post-help{
-	span{.bold;}
+.ua-mobile,.screen-s{
+	.c-post-help{
+		span{.bold;}
+	}
 }
 
 
@@ -75,21 +77,22 @@ body .edt{
 	}
 }
 
-.ua-responsive .screen-s .bbar{
-	
-	#e_tip,#e_svdsecond{
-		.db;.fl;
-		.fzlh(12px,24px);
-		.w(50%);
-	}
-	#e_tip{}
-	#e_svdsecond{.x(right);padding-right:5px;box-sizing:border-box;}
-	.x(left);
-	padding:5px;
+.ua-mobile,.screen-s{
+	.bbar{
+		#e_tip,#e_svdsecond{
+			.db;.fl;
+			.fzlh(12px,24px);
+			.w(50%);
+		}
+		#e_tip{}
+		#e_svdsecond{.x(right);padding-right:5px;box-sizing:border-box;}
+		.x(left);
+		padding:5px;
 
-	.pr;
-	img{
-		.pa;.rb(0,0);
+		.pr;
+		img{
+			.pa;.rb(0,0);
+		}
 	}
 }
 
@@ -133,8 +136,10 @@ body .edt{
 }*/
 
 //手机
-.ua-responsive .screen-s .edt .bar{
-	.none;
+.ua-mobile,.screen-s{
+	.edt .bar{
+		.none;
+	}
 }
 
 
