--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -79,34 +79,36 @@
 	.ftid{float:none;}
 }
 
-.ua-responsive .screen-s .c-post-custom-listitem{
-	border-bottom:none;
+.ua-mobile,.screen-s{
+	.c-post-custom-listitem{
+		border-bottom:none;
 
-	.u-text{
-		.lh(32px);
-	}
-	.u-title,.u-check{
-		.ps;
-		.lh(26px);
-	}
-	.u-title{
-		//color:#259;
-		.bold;
-	}
-	.u-check{
-		.fr;
-		.w(auto);
-		color:#888;
-		font-size:12px;
-	}
-	.u-content{
-		margin:0;
+		.u-text{
+			.lh(32px);
+		}
+		.u-title,.u-check{
+			.ps;
+			.lh(26px);
+		}
+		.u-title{
+			//color:#259;
+			.bold;
+		}
+		.u-check{
+			.fr;
+			.w(auto);
+			color:#888;
+			font-size:12px;
+		}
+		.u-content{
+			margin:0;
 
-		.u-tip{.fz(12px,2);}
-	}
-	.u-upload{
-		.w(100%);
-		margin:0;
+			.u-tip{.fz(12px,2);}
+		}
+		.u-upload{
+			.w(100%);
+			margin:0;
+		}
 	}
 }
 
@@ -121,8 +123,10 @@
 		}
 	}
 }
-.ua-responsive .screen-s  #fwin_upload{
-	.upfile{
-		.w(auto);
+.ua-mobile,.screen-s {
+	#fwin_upload{
+		.upfile{
+			.w(auto);
+		}
 	}
 }
