--- a/css/module/forum/post/c-post-extra.less
+++ b/css/module/forum/post/c-post-extra.less
@@ -83,34 +83,36 @@
     padding: 10px;
 }
 
-.ua-responsive .screen-s .c-post-title{
-	margin-bottom:20px;
-	
-	.c-post-category{
-		.pr;float:none;
-		.full(x);
-		margin-right:0;
-		margin-bottom:10px;
-		a{.bold;}
-	}
+.ua-mobile,.screen-s{
+	.c-post-title{
+		margin-bottom:20px;
+		
+		.c-post-category{
+			.pr;float:none;
+			.full(x);
+			margin-right:0;
+			margin-bottom:10px;
+			a{.bold;}
+		}
 
-	.c-post-subject .u-subject{
-		margin:0 ;
-		margin-bottom:5px;
-		.u-text{.lh(32px);}
-	}
+		.c-post-subject .u-subject{
+			margin:0 ;
+			margin-bottom:5px;
+			.u-text{.lh(32px);}
+		}
 
-	.u-check{
-		.ps;float:none;
-		font-size:12px;
-		//.x(right);
-		.db;
-		.w(auto);
-		color:#888;
+		.u-check{
+			.ps;float:none;
+			font-size:12px;
+			//.x(right);
+			.db;
+			.w(auto);
+			color:#888;
+		}
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
   	.c-post-attachnotice,.c-post-quote{
 		font-size:12px;
 	}
@@ -130,7 +132,9 @@
 	.sppoll #pollm_c_1 p{margin-bottom:5px;}
 	.sadd{.fr;padding-top:10px;}
 }
-.ua-responsive .screen-s .c-post-extra{
-	.sppoll{float:none;}
-	.sadd{float:none;padding-top:10px;}
+.ua-mobile,.screen-s{
+	.c-post-extra{
+		.sppoll{float:none;}
+		.sadd{float:none;padding-top:10px;}
+	}
 }
