--- a/css/module/forum/post/c-post-footer.less
+++ b/css/module/forum/post/c-post-footer.less
@@ -35,8 +35,10 @@
 
 }
 
-.ua-responsive .screen-s .c-post-postbar{
-	.c-post-rule,.u-syncto{.none;}
+.ua-mobile,.screen-s{
+	.c-post-postbar{
+		.c-post-rule,.u-syncto{.none;}
+	}
 }
 
 .u-actopfollow{
