--- a/css/module/forum/post/c-post-tips.less
+++ b/css/module/forum/post/c-post-tips.less
@@ -11,6 +11,11 @@
     ol,li{
 		list-style-position:inside;
 	}
+
+	a{
+		.color(#259,#c00);
+		text-decoration:underline;
+	}
 }
 
 .c-post-tips #c-post-tips-tg{
@@ -35,7 +40,7 @@
 		i{background:url('@{url}icon/desc.gif') no-repeat 0 0;}
 	}
 }
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	#c-post-tips-moretg{.none;}
 }
 
@@ -48,7 +53,7 @@
     b{.bold;color:#555;}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	#c-post-tips-content{
 		.none;
 		.pf;.lt(0,0);.full;
