--- a/css/module/forum/sidebar/list.less
+++ b/css/module/forum/sidebar/list.less
@@ -7,10 +7,12 @@
 	}
 	a:hover{color:@blue-link;}
 }
-.ua-responsive .screen-s .default-sidebar-downlist{
-	a{
-		.lh(40px);
-		border-bottom:1px solid #ddd;
+.ua-mobile,.screen-s{
+	.default-sidebar-downlist{
+		a{
+			.lh(40px);
+			border-bottom:1px solid #ddd;
+		}
 	}
 }
 
@@ -26,11 +28,12 @@
 		}
 	}
 }
-.ua-responsive .screen-s .default-sidebar-wordlist,
-.ua-responsive .screen-s .default-sidebar-tasklist{
-	a{
-		.lh(40px);
-		border-bottom:1px solid #ddd;
+.ua-mobile, .screen-s{
+	.default-sidebar-wordlist,.default-sidebar-tasklist{
+		a{
+			.lh(40px);
+			border-bottom:1px solid #ddd;
+		}
 	}
 }
 
@@ -60,9 +63,11 @@
 		}
 	}
 }
-.ua-responsive .screen-s .default-sidebar-helplist{
-	a{
-		.lh(40px);
-		border-bottom:1px solid #ddd;
+.ua-mobile,.screen-s{
+	.default-sidebar-helplist{
+		a{
+			.lh(40px);
+			border-bottom:1px solid #ddd;
+		}
 	}
 }
