--- a/css/module/forum/sidebar/mobile.less
+++ b/css/module/forum/sidebar/mobile.less
@@ -1,4 +1,4 @@
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.i-header.showSidebar,.user-extend-menu{
 		.z(40);
 	}
@@ -22,7 +22,7 @@
 		box-sizing:border-box;
 	}
 }
-.alertHTML.ua-responsive .screen-s{
+.alertHTML.ua-mobile,.alertHTML .screen-s{
 	.default-sidebar,.user-extend-menu{
 		top:@c-header-height + @c-alert-height;
 	}
