--- a/css/module/forum/sidebar/search.less
+++ b/css/module/forum/sidebar/search.less
@@ -26,7 +26,9 @@
 	}
 }
 
-.ua-responsive .screen-s .default-sidebar-search{
-	.u-text{.w(100%);box-sizing:border-box;}
-	.u-button-search{margin-top:20px;.w(100%);box-sizing:border-box;}
-} 
+.ua-mobile,.screen-s{
+	.default-sidebar-search{
+		.u-text{.w(100%);box-sizing:border-box;}
+		.u-button-search{margin-top:20px;.w(100%);box-sizing:border-box;}
+	} 
+}
