--- a/css/module/forum/sidebar/title.less
+++ b/css/module/forum/sidebar/title.less
@@ -52,10 +52,11 @@
 }
 
 //搜索
-.ua-responsive .screen-s .default-sidebar-title .u-search{
-	.db;
+.ua-mobile,.screen-s{
+	.default-sidebar-title .u-search{
+		.db;
+	}
 }
-
 .default-sidebar-content{
 	margin-bottom:10px;
 }
