--- a/css/module/forum/viewthread/c-fli-cmt.less
+++ b/css/module/forum/viewthread/c-fli-cmt.less
@@ -73,15 +73,16 @@
     }
 }
 
-.ua-responsive .screen-s .c-fli-cmt{
-	.c-fli-cmt-btn{
-		//.ps;.fr;margin-top: 10px;
-		.none;
+.ua-mobile,.screen-s{
+	.c-fli-cmt{
+		.c-fli-cmt-btn{
+			//.ps;.fr;margin-top: 10px;
+			.none;
+		}
 	}
-}
-
-.ua-responsive .screen-s #fwin_comment{
-	.pt{
-		.h(100px);
+	#fwin_comment{
+		.pt{
+			.h(100px);
+		}
 	}
 }
