--- a/css/module/forum/viewthread/c-fli-content.less
+++ b/css/module/forum/viewthread/c-fli-content.less
@@ -12,8 +12,10 @@
 	margin-left: 30px;
 }
 
-.ua-responsive .screen-s .c-fli .c-fli-content{
-	margin-left: 30px;
+.ua-mobile,.screen-s{
+	.c-fli .c-fli-content{
+		margin-left: 30px;
+	}
 }
 
 //提示样式
@@ -29,6 +31,8 @@
 	.u-text{padding:0 10px;/*margin-right:10px;*/}
 	.u-button{padding:0 10px;margin-top:-3px;}
 }
-.ua-responsive .screen-s .c-fli-tips-password{
-	span{.db;}
+.ua-mobile,.screen-s{
+	.c-fli-tips-password{
+		span{.db;}
+	}
 }
