--- a/css/module/forum/viewthread/c-fli-fastreply.less
+++ b/css/module/forum/viewthread/c-fli-fastreply.less
@@ -8,13 +8,15 @@
 	padding-top:5px;
 	padding-bottom:5px;
 }
-.ua-responsive .screen-s  .c-fli-fastreply-box{
-	padding-left:@c-fli-fastreply-link+20px;
-	padding-right:10px;
-}
-
-.ua-responsive .screen-s .c-fli-fastreply{
-	margin:0 auto;
+.ua-mobile,.screen-s {
+	.c-fli-fastreply-box{
+		padding-left:@c-fli-fastreply-link+20px;
+		padding-right:10px;
+	}
+	
+	.c-fli-fastreply{
+		margin:0 auto;
+	}
 }
 
 .c-fli-fastreply-link{
@@ -24,8 +26,10 @@
 	.size(@c-fli-fastreply-link);
 	i{.db;.full;background:~"url('@{url}forum/advreply.svg') no-repeat center center / auto 50%";}
 }
-.ua-responsive .screen-s .c-fli-fastreply-link{
-	left:10px;
+.ua-mobile,.screen-s{
+	.c-fli-fastreply-link{
+		left:10px;
+	}
 }
 
 .c-fli-fastreply-content{
@@ -79,36 +83,40 @@
 
 
 
-.ua-responsive .screen-s .c-fli-fastreply{
-	.w(100%);.h(42px);
-	.pf;.lb(0,@c-footer-height);.z(20);
-	background-color:#f8f8f8;
-	border-top:1px solid #ddd;
+.ua-mobile,.screen-s{
+	.c-fli-fastreply{
+		.w(100%);.h(42px);
+		.pf;.lb(0,@c-footer-height);.z(20);
+		background-color:#f8f8f8;
+		border-top:1px solid #ddd;
+	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.viewpage-container{
 		padding-bottom:@c-footer-height;
 	}
 }
 
 //回复弹层
-.ua-responsive .screen-s #fwin_reply{
-	//隐藏引用内容
-	.m_c .quote{
-		.none;
-	}
-	//隐藏无用的编辑器按钮
-	.fcd,.fqt,.fat,.flnk,.fsml,.fmg{
-		.none;
-	}
-	//加大输入框
-	.tedt .pt{
-		.h(280px);
-	}
-	//本版积分规则
-	.o .y{
-		.none;
+.ua-mobile,.screen-s{
+	#fwin_reply{
+		//隐藏引用内容
+		.m_c .quote{
+			.none;
+		}
+		//隐藏无用的编辑器按钮
+		.fcd,.fqt,.fat,.flnk,.fsml,.fmg{
+			.none;
+		}
+		//加大输入框
+		.tedt .pt{
+			.h(280px);
+		}
+		//本版积分规则
+		.o .y{
+			.none;
+		}
 	}
 }
 
@@ -120,9 +128,13 @@
 .c-fli-first .c-fli-fastreply{
 	.db;	//PC主楼中的显示
 }
-.ua-responsive .screen-s .c-fli-first .c-fli-fastreply{
-	.none;	//M主楼中的隐藏
+.ua-mobile,.screen-s{
+	.c-fli-first .c-fli-fastreply{
+		.none;	//M主楼中的隐藏
+	}
 }
-.ua-responsive .screen-s .c-fli-fastreply{
-	.db;	//M底部的显示
+.ua-mobile,.screen-s{
+	.c-fli-fastreply{
+		.db;	//M底部的显示
+	}
 }
