--- a/css/module/forum/viewthread/c-fli-info.less
+++ b/css/module/forum/viewthread/c-fli-info.less
@@ -13,9 +13,9 @@
 		//.y;margin-top: -1px;
 	}
 }
-.ua-responsive .screen-s .c-fli-replycredit{
-	font-size:12px;
+.ua-mobile,.screen-s{
+	.c-fli-replycredit{
+		font-size:12px;
+	}
 }
-
-
 
