--- a/css/module/forum/viewthread/c-fli-meta.less
+++ b/css/module/forum/viewthread/c-fli-meta.less
@@ -105,10 +105,14 @@
 }
 
 //ipad
-.ua-responsive .screen-m .c-fli-meta{
-	.u-view,.u-reply,.u-print{.none;}
+.ua-mobile,.screen-m{
+	.c-fli-meta{
+		.u-view,.u-reply,.u-print{.none;}
+	}
 }
 //mobile
-.ua-responsive .screen-s .c-fli-meta{
-	.none;
+.ua-mobile,.screen-s{
+	.c-fli-meta{
+		.none;
+	}
 }
