--- a/css/module/forum/viewthread/c-fli-pay.less
+++ b/css/module/forum/viewthread/c-fli-pay.less
@@ -74,9 +74,7 @@
 }
 
 //付费记录弹层
-
-
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.c-fli-pay-content .u-btn-buysub{float:none;}
 	.c-fli-pay-content .u-msg-tobevip{.ps;}
 	.c-fli-pay-content{
