--- a/css/pve/macro/view.less
+++ b/css/pve/macro/view.less
@@ -63,7 +63,7 @@
 	a,img{.db;}
 	span{.none;}
 }
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.m-macro-baseinfo{padding-right:0;}
 	.m-banner-macro{
 		.ps;
@@ -176,4 +176,13 @@
     color:#666;
     .r(0 0 4px 4px);
     &:hover{color:#222;}
+}
+
+.ua-mobile,.screen-s{
+	#macro-copy-tips{
+		font-size:12px;
+	}
+	.m-macro-relative{
+		.none;
+	}
 }
