--- a/css/pve/tool/view.less
+++ b/css/pve/tool/view.less
@@ -80,8 +80,17 @@
 	a,img{.db;}
 	span{.none;}
 }
-.ua-responsive .screen-s{
-	.m-tool-baseinfo{padding-right:0;}
+.ua-mobile,.screen-s{
+	.m-tool-baseinfo{
+		padding-right:0;
+	}
+	.m-tool-baseinfo .information ul li span{
+		background: none;
+		color:#666;
+	}
+	.m-tool-relative{
+		.none;
+	}
 	.m-banner-tool{
 		.ps;
 		margin-top:10px;
