--- a/css/system/404.less
+++ b/css/system/404.less
@@ -134,8 +134,8 @@
 
 }
 
-.ua-mobile,.screen-s{
-    .error-content{
+@media screen and (max-width:720px) {
+	.error-content{
     	.w(90%);
     	.ct(o,337px,272px);.size(337px,272px);
 
