--- a/template/about/forum/viewthread_header.htm
+++ b/template/about/forum/viewthread_header.htm
@@ -11,9 +11,10 @@
 			<!--{/if}-->
 		<!--{/if}-->
 		<!-- 更多 -->
-		<a class="u-all" id="i-header-panel-tg" href="javascript:;"><span>更多</span></a>
+		<a class="u-more" id="i-header-panel-tg" href="javascript:;"><i></i><span>更多</span></a>
 	</div>
 </header>
+<!--{if $_G['mobile']}-->
 <div class="i-header-panel" id="i-header-panel">
 	<ul>
 		<li>
@@ -41,6 +42,7 @@
 		</li>
 	</ul>
 </div>
+<!--{/if}-->
 <div class="viewpage-container f-$_G[fid]-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
