--- a/template/default/jx3pve/c_compass.htm
+++ b/template/default/jx3pve/c_compass.htm
@@ -127,6 +127,10 @@
             <i class="u-fb"><img src="http://img.jx3pve.com/img/system/sitemap/fb.png" alt="副本专题"></i>
             <span>副本专题</span><em class="i-mark-stop"></em>
         </a></li>
+        <li class="u-old"><a href="./forum-415-1.html">
+            <i class="u-wujia"><img src="http://img.jx3pve.com/img/system/sitemap/wujia.png" alt="五甲捷报"></i>
+            <span>五甲捷报</span><em class="i-mark-stop"></em>
+        </a></li>
         <li class="u-old"><a href="./group.php">
             <i class="u-group"><img src="http://img.jx3pve.com/img/system/sitemap/group.png" alt="群组"></i>
             <span>群组</span><em class="i-mark-stop"></em>
