--- a/css/module/forum/viewthread/c-fli-commend.less
+++ b/css/module/forum/viewthread/c-fli-commend.less
@@ -35,16 +35,18 @@
 		i{background:url('@{url}forum/fav2.png') no-repeat 0 0;margin-top:-3px;}
 	}
 }
-.ua-responsive .screen-s .c-fli-commend{
-	//a{.db;margin:10px;padding:10px;}
+.ua-mobile,.screen-s{
+	.c-fli-commend{
+		//a{.db;margin:10px;padding:10px;}
 
-	.u-top,.u-color,.u-zan,.u-rate{
-		//border:none;
-		font-size:12px;
-		padding:5px 10px;
-		background-color:#f2f2f2;
-		border-color:#ddd;
-		color:#666;
-		i{.none;}
+		.u-top,.u-color,.u-zan,.u-rate{
+			//border:none;
+			font-size:12px;
+			padding:5px 10px;
+			background-color:#f2f2f2;
+			border-color:#ddd;
+			color:#666;
+			i{.none;}
+		}
 	}
 }
