--- a/css/module/forum/viewthread/c-fli-footer.less
+++ b/css/module/forum/viewthread/c-fli-footer.less
@@ -10,10 +10,12 @@
 	.rt(0,100%);.z(20);
 	margin-top:0 !important;//不应该受 alertHTML影响
 }
-.ua-responsive .screen-s .c-fli-magic{
-	.pf;.lt(0,0);.z(41);
-	.full(x);.x;
+.ua-mobile,.screen-s{
+	.c-fli-magic{
+		.pf;.lt(0,0);.z(41);
+		.full(x);.x;
 
-	a{.lh(26px) !important;}
-	img{.y;margin-top:4px;}
+		a{.lh(26px) !important;}
+		img{.y;margin-top:4px;}
+	}
 }
