--- a/css/pve/macro/sidebar.less
+++ b/css/pve/macro/sidebar.less
@@ -76,9 +76,11 @@
 		
 	}
 }
-.ua-responsive .screen-s .m-macro-nav{
-	ul{.w(100%);padding:0;box-sizing:border-box;}
-	li{.w(50%);}
+.ua-mobile,.screen-s{
+	.m-macro-nav{
+		ul{.w(100%);padding:0;box-sizing:border-box;}
+		li{.w(50%);}
+	}
 }
 
 //任务
