--- a/css/pve/tool/snow.less
+++ b/css/pve/tool/snow.less
@@ -8,10 +8,7 @@
 	padding-bottom:10px;
 	border-bottom:1px dashed #ddd;
 	&:hover{
-		background-color:#f7f7f7;
-		.u-screenshot{
-			background-color:#fff;
-		}
+		background-color:#f7fdff;
 	}
 	a{
 		.db;
@@ -39,10 +36,10 @@
 		.nobreak;
 		em{
 			.dbi;.y;
-			background-color:#eee;
+			background-color:#fafafa;
 			margin-right:10px;
 			padding:0 10px;
-			color:#555;
+			color:#888;
 			.r(24px);
 		}
 		span{
@@ -57,7 +54,14 @@
 	.u-time{}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
+
+	.m-snow-list-item{
+		border-bottom:none;
+		margin-bottom:20px;
+		background-color:#fff;
+		padding:10px;
+	}
 
 	.m-snow-list-item .u-screenshot{
 		float:none;
@@ -133,20 +137,22 @@
 		.nobreak;
 	}
 }
-.ua-responsive .screen-s .m-snow-primary{
-	.m-snow-shot{
-		float:none;
-	}
-	.u-img{
-		.w(100%);
-		box-sizing:border-box;
-		.h(auto);
-		max-width:100%;
-	}
+.ua-mobile,.screen-s{
+	.m-snow-primary{
+		.m-snow-shot{
+			float:none;
+		}
+		.u-img{
+			.w(100%);
+			box-sizing:border-box;
+			.h(auto);
+			max-width:100%;
+		}
 
-	.m-snow-info{
-		margin-left:0;
-		margin-top:10px;
+		.m-snow-info{
+			margin-left:0;
+			margin-top:10px;
+		}
 	}
 }
 
