副本栏目手机版

--- a/css/module/forum/viewthread/c-fli-primary.less
+++ b/css/module/forum/viewthread/c-fli-primary.less
@@ -23,11 +23,13 @@
 	u{text-decoration:underline;}
 
 	//图片
-	embed{
+	embed,video,object{
 		width:800px;height:600px;
 		max-width:100%;min-height:200px;
 	}
-	img{max-width:100%;height: auto;}
+	img{
+		max-width:100%;height:auto;
+	}
 
 	//水平线
 	hr{
