--- a/css/module/widget/w-mode.less
+++ b/css/module/widget/w-mode.less
@@ -90,9 +90,9 @@
 	.pf;.lt(0,@c-header-height);bottom:@c-footer-height;.z(20);
 	.w(100%);background-color:#fff;
 	padding-top:20px;
-	padding-bottom:40px;
 	padding-right:0;
 	padding-left:0;
+	overflow-y:auto;
 
 	.u-item{
 		.db;.w(50%);
@@ -100,7 +100,7 @@
 		box-sizing:border-box;
 		padding:2px 10px 2px 20px;
 		height:28px;
-		margin-bottom:6px;
+		margin-bottom:10px;
 		.vm{
 			.fl;
 			margin-right:5px;
@@ -126,8 +126,9 @@
 		.none;
 	}
 	.u-close{
-		.db;
-		.pa;.lb(0,0);.size(100%,40px);
+		margin-top:20px;
+		.db;.clear;
+		.size(100%,40px);
 		border-top:1px solid #eee;
 		.x;font-size:13px;
 		color:#666;
