--- a/css/app/faceclean/faceclean.less
+++ b/css/app/faceclean/faceclean.less
@@ -22,6 +22,12 @@
 }
 
 .ua-mobile,.screen-s{
+    .app-container{
+        padding:0 10px;
+    }
+    .app-106-container{
+        background: none;
+    }
 	.m-faceclean{
 		padding:0;
 		margin-top:10px;
